# horde-sdk

./: .changelog  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  dev.py  example.py  mkdocs.yml  mypy.ini  out.json  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.txt  setup.py  style.py  tach.toml  tox.ini  typechecking.py
.github/: dependabot.yml
.github/.workflows/: maintests.yml
.github/workflows/: codeql.yml  lint.yml  maintests.yml  prtests.yml  release.yml
codegen/: README.md  ai_horde_codegen_10072023.py  ai_horde_codegen_20240415.py  codegen_regex_fixes.py  swagger.json  swagger_openapi3.json
codegen/ai_horde/: README.md  codegen_regex_fixes.py  swagger.json  swagger_openapi3.json
docs/: .pages  api_to_sdk_map.md  api_to_sdk_payload_map.json  api_to_sdk_response_map.json  build_docs.py  definitions.md  developers.md  examples.md  faq.md  getting_started.md  index.md  installation.md  request_field_names_and_descriptions.json  response_field_names_and_descriptions.json
docs/ai-horde/: api_to_sdk_map.md  api_to_sdk_payload_map.json  api_to_sdk_response_map.json  request_field_names_and_descriptions.json  response_field_names_and_descriptions.json
docs/ai-horde-worker/: worker_states_flow.md
docs/concepts/: backend_values_mappers.md  client_design.md  package_structure.md  style_guide.md
docs/horde_sdk/: .pages  _version.md  consts.md  exceptions.md  horde_logging.md  localize.md  logging.md  meta.md  object_models.md  safety.md  utils.md
docs/horde_sdk/_telemetry/: .pages  metrics.md
docs/horde_sdk/ai_horde_api/: .pages  ai_horde_client.md  ai_horde_clients.md  consts.md  endpoints.md  exceptions.md  fields.md  kudos.md  metadata.md  model_records.md  server_model_names.md
docs/horde_sdk/ai_horde_worker/: .pages  bridge_data.md  consts.md  generations.md  generations_base.md  model_meta.md  worker_client.md
docs/horde_sdk/backend_parsing/: .pages  consts.md  object_models.md
docs/horde_sdk/deploy_config/: .pages
docs/horde_sdk/generation_parameters/: .pages  utils.md  versioning.md
docs/horde_sdk/generic_api/: .pages  _reflection.md  apimodels.md  consts.md  decoration.md  endpoints.md  generic_client.md  generic_clients.md  metadata.md
docs/source/: conf.py  horde_sdk.ai_horde_api.apimodels.generate.rst  horde_sdk.ai_horde_api.apimodels.rst  horde_sdk.ai_horde_api.rst  horde_sdk.ai_horde_worker.locale_info.rst  horde_sdk.ai_horde_worker.rst  horde_sdk.generic_api.rst  horde_sdk.ratings_api.rst  horde_sdk.rst  index.rst  modules.rst  usage.rst
docs/stylesheets/: extra.css
docs/worker/: base_transitions.yaml  black_box_transitions.yaml  generation_parameters.md  generation_states_flow.md  generations.md
examples/: ai_horde_api_client.example.py  async_ai_horde_api_client_example.py  ratings_api_client_example.py
examples/ai_horde_client/: aihorde_dry_run_example.py  aihorde_manual_client_example.py  aihorde_simple_client_example.py  alchemy_example.py  async_aihorde_manual_client_example.py  async_aihorde_simple_client_example.py  find_user.py  workers.py
examples/ratings_client/: ratings_api_client_example.py
examples/worker/: README.md
horde_sdk/: __init__.py  consts.py  exceptions.py  horde_logging.py  localize.py  logging.py  meta.py  safety.py  utils.py
horde_sdk/_telemetry/: metrics.py
horde_sdk/ai_horde_api/: __init__.py  ai_horde_client.py  ai_horde_clients.py  consts.py  endpoints.py  exceptions.py  fields.py  kudos.py  metadata.py  model_records.py
horde_sdk/ai_horde_worker/: __init__.py  bridge_data.py  consts.py  generations.py  generations_base.py  kudos.py  model_meta.py
horde_sdk/backend_parsing/: __init__.py  object_models.py
horde_sdk/deploy_config/: __init__.py
horde_sdk/generation_parameters/: __init__.py  utils.py  versioning.py
horde_sdk/generic_api/: __init__.py  _reflection.py  apimodels.py  consts.py  decoration.py  endpoints.py  generic_client.py  generic_clients.py  metadata.py
horde_sdk/model_reference/: __init__.py
horde_sdk/ratings_api/: __init__.py  apimodels.py  endpoints.py  metadata.py  ratings_client.py
horde_sdk/scripts/: __init__.py  write_all_payload_examples.py  write_all_payload_examples_for_tests.py  write_all_response_examples.py  write_all_response_examples_for_tests.py
horde_sdk/utils/: __init__.py  image_utils.py
horde_sdk/worker/: __init__.py  bridge_data.py  builders.py  consts.py  exceptions.py  feature_flags.py  generations.py  generations_base.py  job_base.py  jobs.py  model_meta.py  worker_client.py
src/horde_sdk/: __init__.py  consts.py  models.py  utils.py
tests/: conftest.py  test_ai_horde_api_models.py  test_dynamic.py  test_dynamically_check_apimodels.py  test_generic.py  test_ratings_api_models.py  test_utils.py  test_verify_api_surface.py
tests/ai_horde_api/: test_ai_horde_alchemy_api_calls.py  test_ai_horde_api_calls.py  test_ai_horde_api_models.py  test_ai_horde_generate_api_calls.py  test_ai_horde_generate_text_api_calls.py  test_ai_horde_stats_api_calls.py  test_ai_horde_status_api_calls.py  test_ai_worker_roundtrip_api_calls.py  test_api_calls.py  test_dynamically_validate_against_swagger.py  test_follow_up_cleanup_requests.py  test_shared_keys_api_calls.py  test_swagger.py  test_utils.py
tests/ai_horde_worker/: test_consts.py  test_horde_single_generations.py  test_model_meta.py  test_model_meta_api_calls.py  test_model_meta_injection.py
tests/backend_parsing/: test_backend_mapper.py
tests/deploy_config/: test_feature_flags.py
tests/generation_parameters/: test_alchemy_dispatch.py  test_controlnet_consts.py  test_image_templates.py  test_template_finalization_enforcement.py  test_text_templates.py  test_utils.py
tests/ratings_api/: test_init.py
tests/test_data/: RequestErrorResponse.json  UserRatingsResponse.json  UserValidateResponse.json  swagger.json
tests/worker/: conftest.py  test_consts.py  test_generation_parameters.py  test_horde_single_generations.py  test_jobs.py  test_progress_transitions.py
(+422 files in other folders)
