[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_sdk"
description = "A python toolkit for interacting with the horde APIs, services, and ecosystem."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic=["version", "dependencies"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 4 - Beta",
]

[tool.setuptools_scm]
write_to = "horde_sdk/_version.py"

[tool.setuptools.package-dir]
horde_sdk = "horde_sdk"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-sdk"

[tool.setuptools.package-data]
horde_sdk = ["py.typed", "lib.pyi"]
tests = ["*.json"]

[tool.ruff]
line-length = 119
select = [
  "A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  "B",
  "C4",
  "PIE",
  "RET",
  "SIM",
  "COM",
  # "D",
  "ANN",
  "RUF"]
ignore = [
  "ANN101",
  "ANN102",
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",]
exclude = ["codegen"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
 \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 | dist
)/
'''

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.coverage.run]
concurrency = ["gevent"]
