[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_sdk"
description = "A python toolkit for interacting with the horde APIs, services, and ecosystem."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic=["version"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "aiodns>=3.2.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "certifi>=2025.1.31",
    "horde-model-reference>=2.1.5",
    "logfire>=3.7.1",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "strenum>=0.4.15",
]

[tool.setuptools_scm]
write_to = "horde_sdk/_version.py"

[tool.setuptools.package-dir]
horde_sdk = "horde_sdk"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-sdk"

[tool.setuptools.package-data]
horde_sdk = ["py.typed", "lib.pyi"]
tests = ["*.json"]

[tool.ruff]
line-length = 119
exclude = ["codegen", ".venv*"]

[tool.ruff.lint]
select = [
  "A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  "TID",
  "B",
  "C4",
  "PIE",
  "RET",
  "SIM",
  "COM",
  "D",
  "D417", # Missing argument descriptions in the docstring
  "ANN",
  "RUF",
  "ASYNC",
  ]
ignore = [
  "COM812", # Missing trailing comma in a trailing collection (handled by ruff format directly)
  "D105", # Missing docstring in magic method
  "D100", # Missing docstring in public module
  # Ignore D rules for non-google docstring standard
  "D203", # 1 blank line required before class docstring
  "D204",  # 1 blank line required after class docstring
  "D213",  # Multi-line docstring summary should start at the second line
  "D215", # Section underline is over-indented
  "D400", # First line should end with a period
  "D404", # First word of the docstring should not be This
  "D406", # Section name should end with a newline
  "D407", # Missing dashed underline after section
  "D408", # Section underline should be in the line following the section's name
  "D409", # Section underline should match the length of its name
  "D413",] # Missing blank line after last section

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"conftest.py" = ["E402"]
"tests/*" = ["D"] # Ignore D rules for tests
"examples/*" = ["D"] # Ignore D rules for examples
"docs/*" = ["D"] # Ignore D rules for docs
"codegen/*" = ["D"] # Ignore D rules for codegen


[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
disallow_untyped_defs = true
warn_unused_configs = true
exclude = [
  '^codegen',
  '\.git',
  '\.hg',
  '\.mypy_cache',
  '\.ruff_cache',
  '\.tox',
  '\.venv',
  '\.venv.*',
  '_build',
  'buck-out',
  'build',
  'codegen',
  'dist',
  'docs',
]

[tool.coverage.run]
concurrency = ["gevent"]

[tool.pytest.ini_options]
# You can use `and`, `or`, `not` and parentheses to filter with the `-m` option
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "object_verify: marks tests that verify the API object structure and layout",
    "api_side_ci: indicates that the test is intended to run during CI for the API",
]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "build>=0.10.0",
    "coverage>=7.2.7",
    "datamodel-code-generator>=0.28.4",
    "gevent>=24.11.1",
    "mypy>=1.13.0",
    "pre-commit~=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.7.2",
    "tach>=0.29.0",
    "tox~=4.23.2",
    "types-aiofiles>=24.1.0.20241221",
    "types-networkx>=3.5.0.20251104",
    "types-pillow>=10.2.0.20240822",
    "types-pytz>=2025.1.0.20250204",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250306",
    "types-setuptools>=75.8.2.20250305",
    "types-urllib3>=1.26.25.14",
]
docs = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.7",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings>=0.29.0",
    "mkdocstrings-python>=1.16.5",
]
full-telemetry = [
    "opentelemetry-instrumentation-aiohttp-client>=0.51b0",
    "opentelemetry-instrumentation-requests>=0.51b0",
]
